--- a/css/style.css
+++ b/css/style.css
@@ -58,10 +58,6 @@ p {
 
 /* #region Utility */
 
-#site_main {
-  height: calc(100vh - 100px);
-}
-
 .flex {
   display: flex;
 }
@@ -69,6 +65,32 @@ p {
 .p_relative {
   position: relative;
 }
+
+.circle {
+  border-radius: 50%;
+}
+
+.line_dark {
+  height: 3px;
+  background-color: var(--line_footer);
+  border-radius: 10px;
+}
+
+.line_light {
+  border-radius: 10px;
+  height: 3px;
+  background-color: var(--line_footer_light);
+}
+
+/* #endregion Utility */
+
+/* #region Main Site */
+
+#site_main {
+  height: calc(100vh - 100px);
+}
+
+/* #region Aside */
 
 .sidebar {
   width: 240px;
@@ -78,35 +100,6 @@ p {
   flex-flow: column nowrap;
   justify-content: space-between;
 }
-
-.main {
-  width: calc(100% - 240px);
-  flex-direction: column;
-  color: var(--light);
-  background-color: var(--bg_main);
-}
-
-.body {
-  height: calc(100% - 100px);
-  padding: 20px;
-  flex-direction: column;
-  gap: 40px 0px;
-  overflow: auto;
-}
-
-#site_footer {
-  height: 100px;
-  background-color: var(--bg_footer);
-}
-
-.circle {
-  border-radius: 50%;
-}
-/* #endregion Utility */
-
-/* #region Main Site */
-
-/* #region Aside */
 
 /* #region Main Aside */
 
@@ -187,6 +180,7 @@ p {
   flex-direction: column;
   padding: 8px 20px;
   gap: 10px 0px;
+  overflow: hidden;
 }
 
 .download_aside {
@@ -220,14 +214,22 @@ p {
 
 /* #region Main */
 
+.main {
+  width: calc(100% - 240px);
+  flex-direction: column;
+  color: var(--light);
+  background-color: var(--bg_main);
+}
+
 /* #region Header */
 
 .header {
   justify-content: flex-end;
   align-items: center;
   padding: 0 10px;
-  position: sticky;
+  position: fixed;
   height: 100px;
+  width: calc(100% - 240px);
   background-color: var(--bg_header);
 }
 
@@ -240,6 +242,15 @@ p {
 /* #endregion Header */
 
 /* #region Body */
+
+.body {
+  height: calc(100% - 100px);
+  padding: 20px;
+  flex-direction: column;
+  gap: 40px 0px;
+  overflow: auto;
+  margin-top: 100px;
+}
 
 .navbar {
   justify-content: center;
@@ -291,6 +302,11 @@ p {
 
 /* #region Footer */
 
+#site_footer {
+  height: 100px;
+  background-color: var(--bg_footer);
+}
+
 .footer {
   height: 100%;
   justify-content: space-between;
@@ -335,7 +351,7 @@ p {
 .menu_center {
   flex-direction: column;
   color: var(--light);
-  width: 480px;
+  width: 35%;
 }
 
 .play_top {
@@ -354,30 +370,51 @@ p {
 
 .play_bottom {
   height: 50%;
+  align-items: center;
+  gap: 0 10px;
+}
+
+.play_bottom > span {
+  font-size: 10px;
+}
+
+.line_long_center {
+  width: calc(100% - 30px);
+}
+
+.line_short_center {
+  width: 20%;
+  position: absolute;
+  top: calc(50% - 1.5px);
+  left: 30px;
+}
+
+/* #endregion Menu_center */
+
+/* #region Menu_left */
+
+.menu_left{
+  width: 220px;
   justify-content: space-between;
   align-items: center;
 }
 
-.play_bottom>span{
-  font-size: 10px;
+.menu_left>i{
+  font-size: 14px;
+  color: var(--light);
 }
 
-.line_dark {
-  height: 3px;
-  width: 400px;
-  background-color: var(--line_footer);
-  border-radius: 10px;
+.line_long_right{
+  width: 120px;
 }
 
-.line_light {
-  border-radius: 10px;
+.line_short_right{
+  width: 20px;
   position: absolute;
   top: calc(50% - 1.5px);
-  left: 40px;
-  height: 3px;
-  width: 100px;
-  background-color: var(--line_footer_light);
+  right: 100px;
 }
-/* #endregion Menu_center */
+
+/* #endregion Menu_left */
 
 /* #endregion Footer */
