--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,9 @@ p {
   border-radius: 10px;
   height: 3px;
   background-color: var(--line_footer_light);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /* #endregion Utility */
@@ -226,7 +229,7 @@ p {
 .header {
   justify-content: flex-end;
   align-items: center;
-  padding: 0 10px;
+  padding-right: 25px;
   position: fixed;
   height: 100px;
   width: calc(100% - 240px);
@@ -254,6 +257,9 @@ p {
 
 .navbar {
   justify-content: center;
+}
+
+.container_nav{
   gap: 0 25px;
 }
 
@@ -277,6 +283,19 @@ p {
 .card_container {
   width: 180px;
   text-align: center;
+}
+
+.img_album{
+  height: 180px;
+}
+
+.img_album>i{
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  font-size: 50px;
 }
 
 .card_container > h3 {
@@ -303,8 +322,10 @@ p {
 /* #region Footer */
 
 #site_footer {
+  width: 100%;
   height: 100px;
   background-color: var(--bg_footer);
+  overflow-y: auto;
 }
 
 .footer {
@@ -312,14 +333,17 @@ p {
   justify-content: space-between;
   padding: 10px;
   color: var(--text_main);
+  
 }
 
-/* #region Menu_right */
+/* #region Menu_left */
 
-.menu_right {
+.menu_left {
   justify-content: space-between;
   width: 220px;
   align-items: center;
+  padding-right: 10px;
+  min-width: 220px;
 }
 
 .now_play {
@@ -344,7 +368,7 @@ p {
   font-size: 16px;
 }
 
-/* #endregion Menu_right */
+/* #endregion Menu_left */
 
 /* #region Menu_center */
 
@@ -352,9 +376,11 @@ p {
   flex-direction: column;
   color: var(--light);
   width: 35%;
+  min-width: 250px;
 }
 
 .play_top {
+  height: 50%;
   gap: 0 30px;
   justify-content: center;
   align-items: center;
@@ -384,22 +410,33 @@ p {
 
 .line_short_center {
   width: 20%;
+}
+
+.line_center{
+  display: none;
   position: absolute;
-  top: calc(50% - 1.5px);
-  left: 30px;
+  top: 50%;
+  left: 20%;
+  height: 10px;
+  width: 10px;
+  background-color: var(--light);
+  transform: translate(-50%, -50%);
+
 }
 
 /* #endregion Menu_center */
 
-/* #region Menu_left */
+/* #region Menu_right */
 
-.menu_left{
+.menu_right{
   width: 220px;
   justify-content: space-between;
   align-items: center;
+  padding-left: 10px;
+  min-width: 220px;
 }
 
-.menu_left>i{
+.menu_right>i{
   font-size: 14px;
   color: var(--light);
 }
@@ -415,6 +452,67 @@ p {
   right: 100px;
 }
 
+.line_right{
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  height: 10px;
+  width: 10px;
+  background-color: var(--light);
+  transform: translate(-50%, -50%);
+}
 /* #endregion Menu_left */
 
 /* #endregion Footer */
+
+/* #region Hover */
+
+.line_dark:hover .line_light{
+  background-color: var(--active);
+}
+
+.line_dark:hover .line_right,
+.line_dark:hover .line_center{
+  display: block;
+}
+
+.upgrade:hover{
+  transform: scale(1.1);
+}
+
+.button_aside:hover,
+.plus_playlist:hover,
+span:hover,
+a:hover,
+.icon>i:hover,
+.title_now_play>p:hover{
+  color: var(--light);
+}
+
+.title_now_play>p:hover{
+  text-decoration: underline;
+}
+
+.button_aside:hover path{
+  fill: var(--light);
+}
+
+.plus_playlist:hover .square{
+  background-color: var(--light);
+}
+
+.play_top>.fa-circle-play:hover{
+  transform: scale(1.2);
+}
+
+.img_album:hover i{
+  display: block;
+  z-index: 1;
+}
+
+.img_album:hover img{
+  filter: brightness(0.5);
+}
+
+/* #endregion Hover */
