--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,6 @@ path {
 
 a {
   text-decoration: none;
-  padding: 5px;
   color: var(--text_main);
 }
 
@@ -228,6 +227,7 @@ p {
   color: var(--light);
   background-color: var(--bg_main);
   overflow: hidden;
+  transition: all 1s;
 }
 
 /* #region Header */
@@ -246,6 +246,7 @@ p {
   padding: 12px 50px;
   border: 1px solid var(--light);
   border-radius: 30px;
+  color: var(--light);
 }
 
 /* #endregion Header */
@@ -288,13 +289,14 @@ p {
   padding: 0 5px;
 }
 
-.img_album > i {
+.img_album > a {
   display: none;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 50px;
+  color: var(--light);
 }
 
 .card_container > h3 {
@@ -327,7 +329,7 @@ p {
   overflow-y: auto;
 }
 
-.footer {
+.footer_nav {
   height: 100%;
   justify-content: space-between;
   padding: 10px;
@@ -358,7 +360,7 @@ p {
 .title_now_play > p {
   font-size: 13px;
 }
-.icon > i {
+.icon_left > a {
   padding: 0 5px;
   font-size: 16px;
 }
@@ -381,12 +383,14 @@ p {
   align-items: center;
 }
 
-.play_top > i {
+.play_top > a {
   font-size: 15px;
+  color: var(--light);
 }
 
-.play_top > i:nth-child(3) {
+.play_top > a:nth-child(3) {
   font-size: 30px;
+  color: var(--light);
 }
 
 .play_bottom {
@@ -407,7 +411,7 @@ p {
   width: 20%;
 }
 
-.line_center {
+.point_center {
   display: none;
   position: absolute;
   top: 50%;
@@ -424,12 +428,13 @@ p {
 
 .menu_right {
   align-items: center;
-  gap: 0 20px;
+  gap: 0 10px;
 }
 
-.menu_right > i {
+.icon_right > a {
   font-size: 14px;
   color: var(--light);
+  padding: 0 5px;
 }
 
 .line_long_right {
@@ -443,7 +448,7 @@ p {
   right: 100px;
 }
 
-.line_right {
+.point_right {
   display: none;
   position: absolute;
   top: 50%;
@@ -453,6 +458,7 @@ p {
   background-color: var(--light);
   transform: translate(-50%, -50%);
 }
+
 /* #endregion Menu_left */
 
 /* #endregion Footer */
@@ -463,9 +469,10 @@ p {
 
 .button_aside:hover,
 .plus_playlist:hover,
-span:hover,
-a:hover,
-.icon > i:hover,
+.list_playlist > li > a:hover,
+.download_aside > span:hover,
+.container_nav > li > a:hover,
+.icon_left > a:hover,
 .title_now_play > p:hover {
   color: var(--light);
 }
@@ -488,7 +495,7 @@ a:hover,
   transform: scale(1.1);
 }
 
-.play_top > .fa-circle-play:hover {
+.play_top .fa-circle-play:hover {
   transform: scale(1.2);
 }
 
@@ -498,17 +505,17 @@ a:hover,
   background-color: var(--active);
 }
 
-.line_dark:hover .line_right,
-.line_dark:hover .line_center {
+.line_dark:hover .point_right,
+.line_dark:hover .point_center {
   display: block;
 }
 
-.img_album:hover i {
+.img_album:hover > a {
   display: block;
   z-index: 1;
 }
 
-.img_album:hover img {
+.img_album:hover > img {
   filter: brightness(0.5);
 }
 
@@ -536,49 +543,59 @@ a:hover,
     width: calc(100% / 2);
   }
 
-  .menu_right > i:first-child {
-    display: none;
-  }
-
   .line_long_right {
     width: 80px;
+  }
+
+  .menu_left {
+    gap: 0;
+  }
+
+  .menu_center {
+    min-width: 0;
+  }
+
+  .play_top {
+    gap: 0;
+    justify-content: space-around;
   }
 }
 
 /* MEDIA XS */
 
 @media screen and (max-width: 600px) {
-  
   .sidebar {
-    width: 66px;
+    width: 62px;
   }
 
   .main {
-    width: calc(100% - 66px);
+    width: calc(100% - 62px);
   }
 
   .main_sidebar,
-  .footer_aside {
+  .footer_sidebar {
     align-items: center;
+  }
+  
+  .main_sidebar {
+    min-height: 195px;
   }
 
   .footer_sidebar {
     gap: 35px 0px;
     padding: 10px 0;
-    align-items: center;
   }
 
   /* Display */
 
-  .menu_right > i:nth-child(2) {
-    display: none;
-  }
-
-  .sidebar span,
-  .sidebar h4,
-  .sidebar hr,
+  .button_aside > span,
+  .download_aside > span,
+  .footer_sidebar > hr,
+  .user_aside > h4,
   .playlist,
-  .icon {
+  .icon_left,
+  .icon_right > a:nth-child(1),
+  .icon_right > a:nth-child(2) {
     display: none;
   }
 
@@ -623,4 +640,4 @@ a:hover,
     padding-left: 0;
   }
 }
-/* #endregion Media */ 
+/* #endregion Media */
