--- a/bonus/css/playlist.css
+++ b/bonus/css/playlist.css
@@ -201,6 +201,7 @@ p {
   gap: 0 10px;
   align-items: center;
 }
+
 .download_aside > svg {
   width: 20px;
   margin-left: -3px;
@@ -210,9 +211,11 @@ p {
   align-items: center;
   gap: 0 10px;
 }
+
 .user_aside > h4 {
   color: var(--light);
 }
+
 .user {
   height: 30px;
   width: 30px;
@@ -284,6 +287,7 @@ p {
 .title_playlist {
   justify-content: space-between;
   align-items: center;
+  padding: 0 20px;
 }
 
 .description_playlist {
@@ -454,6 +458,7 @@ p {
 .title_now_play > p {
   font-size: 13px;
 }
+
 .icon_left > a {
   padding: 0 5px;
   font-size: 16px;
@@ -644,52 +649,6 @@ p {
   }
 }
 
-@keyframes Spin {
-  0% {
-    top: calc(50% - 25px);
-    left: calc(50% - 25px);
-    transform: translate(-50%, -50%);
-    transform: rotate(0deg);
-  }
-  100% {
-    top: calc(50% - 25px);
-    left: calc(50% - 25px);
-    transform: translate(-50%, -50%);
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes long {
-  0% {
-    width: 30px;
-  }
-
-  50% {
-    width: 100%;
-  }
-
-  100% {
-    width: 30px;
-  }
-}
-
-@keyframes bounce-in {
-  0% {
-    opacity: 0;
-    transform: scale(0.5);
-  }
-  50% {
-    opacity: 1;
-    transform: scale(1.5);
-  }
-  70% {
-    transform: scale(0.8);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
 @keyframes flip {
   0% {
     transform: perspective(400px) rotateY(0);
@@ -815,6 +774,7 @@ p {
 /* MEDIA MD */
 
 @media screen and (max-width: 1100px) {
+  
   .col_lg,
   .col_m {
     width: calc(100% / 2 - 10%);
@@ -832,6 +792,7 @@ p {
 /* MEDIA S */
 
 @media screen and (max-width: 800px) {
+  
   .sidebar {
     width: 62px;
   }
@@ -929,6 +890,7 @@ p {
 /* MEDIA XS */
 
 @media screen and (max-width: 600px) {
+  
   .col_lg {
     width: 100%;
   }
@@ -942,6 +904,7 @@ p {
   }
 
   /* Display */
+
   .upgrade,
   .col_m,
   .icon_left,
@@ -970,7 +933,7 @@ p {
 }
 
 .description_playlist> h1{
-  font-size: 30px;
+  font-size: 24px;
 }
 
 .arrow{
@@ -1011,9 +974,18 @@ p {
   }
 }
 
-@media screen and (max-height: 670px) {
+@media screen and (max-height:550px) {
+
+  .header{
+    height: 60px;
+  }
+
+  .body{
+    height: calc(100% - 60px);
+  }
+
   .description_playlist{
-    transform: scale(0.5);
+    display: none;
   }
 }
 /* #endregion Media */
